# auth-api

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  UV_README.md  alembic.ini  app.py  compatibility_patch.py  db.py  docker-compose.db.yml  docker-compose.yaml  docker-compose.yml  exceptions.py  main.py  middlewares.py  models.py  pyproject.toml  redis.py  requirements.txt  routes.py  schemas.py  settings.py  utils.py  uv-dev.sh  views.py
.github/: dependabot.yml
.github/workflows/: ci-unittests.yml  codeql-analysis.yml  docker-build.yml  semgrep.yml
alembic/: env.py
alembic/versions/: 157a14257e82_add_user_confirmed_field.py  3f62a6732e18_initial_user_table_create.py  7fd01c7f7556_.py  ba5115c53b76_.py  c9dcaa62cc91_.py
app/: __init__.py  auth.py  middlewares.py  settings.py
backends/: db.py  redis.py
docs/: index.rst
helpers/: errors.py  utils.py
models/: users.py
routes/: auth.py
schemas/: users.py
scripts/: pre-commit.sh
tests/: conftest.py  test_app.py  test_imports.py  test_middleware.py  test_models.py  test_redis.py  test_redis_backend.py  test_unit.py  test_view.py  test_view_users.py
views/: auth.py  users.py
views/helpers/: params.py  responses.py
