[project]
name = "auth-api"
version = "0.1.0"
description = "A modern Python web authentication API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp==3.13.2",
    "aiohttp-apispec==2.2.3",
    "aiohttp-jwt==0.6.1",
    "aiopg==1.4.0",
    "redis==7.0.1",
    "alembic==1.13.3",
    "pydantic==2.12.3",
    "pydantic-settings==2.4.0",
    "SQLAlchemy==2.0.44",
    "PyJWT==2.9.0",
    "email-validator>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.18.3",
    "pytest-cov==5.0.0",
    "flake8==6.0.0",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "pre-commit==4.0.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]