[project]
name = "auth-api"
version = "0.1.0"
description = "A modern Python web authentication API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.2",
    "aiohttp-apispec==2.2.3",
    "aiohttp-jwt==0.6.1",
    "aiopg==1.4.0",
    "redis==7.0.1",
    "alembic==1.13.3",
    "pydantic==2.12.3",
    "pydantic-settings==2.4.0",
    "SQLAlchemy==2.0.44",
    "PyJWT==2.9.0",
    "email-validator>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.18.3",
    "pytest-cov==5.0.0",
    "ruff==0.10.0",
    "basedpyright==1.20.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "backends*", "helpers*", "models*", "routes*", "schemas*", "views*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
extend-ignore = [
    "E501",  # Line too long (let ruff handle this)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false