[project]
name = "auth-api"
version = "0.1.0"
description = "A modern Python web authentication API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.2",
    "aiohttp-apispec==3.0.0b2", # Updated to beta version with better dependency support
    "aiohttp-jwt==0.6.1",
    "asyncpg==0.31.0", # Replaced aiopg with asyncpg
    "redis==7.1.0",
    "alembic==1.17.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "SQLAlchemy==2.0.45",
    "PyJWT==2.10.1",
    "email-validator>=1.0.0",
    "greenlet>=3.2.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-aiohttp==1.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.10",
    "basedpyright==1.37.0",
    "pre-commit==4.5.1"  # Added pre-commit for code quality checks
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "backends*", "helpers*", "models*", "routes*", "schemas*", "views*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
extend-ignore = [
    "E501",  # Line too long (let ruff handle this)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
